--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,5 +1,5 @@
 FROM almalinux:9
-ENV course="Devops with AWS" \
-    duration="120hrs"
+ARG course
+ARG duration
 RUN echo "Course: $course, duration: $duration"
 CMD ["sleep","100"]
