--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,5 +1,6 @@
-FROM almalinux:9
-ARG course
-ARG duration
-RUN echo "Course: $course, duration: $duration"
+ARG version
+FROM almalinux:${version:-9}
+ARG course="Devops with AWS" \
+    duration="120hrs"
+RUN echo "Course: $course, duration: $duration, version: $version"
 CMD ["sleep","100"]
